<resources>
    <string name="app_name" translatable="false">Mautic Monitoring</string>
    <string name="is_published">Public</string>
    <string name="not_published">Private</string>
    <string name="publish_up">Publish up</string>
    <string name="not_yet_published">Not yet</string>
    <string name="extension_label">Extension</string>
    <string name="url_downloads_label">URL</string>
    <string name="performance_textView">PERFORMANCE</string>
    <string name="clicks_fragment_campaign_detail">Clicks</string>
    <string name="detail_lab">DETAIL</string>
    <string name="all_label_fragment_campaign_detail">All</string>
    <string name="unsubscribed_performance_item">Unsubscribed</string>
    <string name="choose_mail_app">Choose your mail application</string>
    <string name="msg_no_asset">There is no Asset</string>
    <string name="msg_no_form">There is no form</string>
    <string name="msg_no_campaign">There is no campaign</string>
    <string name="msg_no_submissions">There is no submission</string>
    <string name="toolbar_title_submissions">Submissions</string>
    <string name="msg_no_contact">There is no contact</string>
    <string name="toolbar_title_asset_detail">Asset</string>
    <string name="not_founded">Not found</string>
    <string name="downloads_label">DOWNLOADS</string>
    <string name="published_state_public">Public</string>
    <string name="published_state_private">Privé</string>
    <string name="date_added_label">Date added</string>
    <string name="first_active_label">First active</string>
    <string name="last_active_label">Last active</string>
    <string name="points_label">Points</string>
    <string name="name_label">Name</string>
    <string name="published_up_label">Published up</string>
    <string name="subject_label">Subject</string>
    <string name="sent_count_label">Sent count</string>
    <string name="performance_label">PERFORMANCE</string>
    <string name="is_published_label">Visibility</string>
    <string name="submissions_count_label">Submissions count</string>
    <string name="submissions_label">SUBMISSIONS</string>
    <string name="email_user_hint">Username Or Email</string>
    <string name="password_user_hint">Password</string>
    <string name="url_user_hint" translatable="false">https://mon-mautic.com</string>
    <string name="connexion_btn_text">Login</string>
    <string name="emails_count_label">"Number of emails "</string>
    <string name="emails_label">EMAILS</string>
    <string name="date_submitted_label">Date</string>
    <string name="lead_label">By</string>
    <string name="values_submitted_label">Values submitted</string>
    <string name="campaign_detail_toolbar_title">Campaign</string>
    <string name="contact_never_active">Never</string>
    <string name="not_yet_published_up">Not yet</string>
    <string name="msg_identifiers_invalide">Identifiers invalid</string>
    <string name="nb_email_sent_label">" Sent"</string>
    <string name="msg_phone_number_not_specified">Phone number not specified</string>
    <string name="value_not_specified">Not specified</string>
    <string name="msg_email_not_specified">Email address not specified</string>
    <string name="contact_detail_toolbar_title">Contact</string>
    <string name="downloads_unique_count_legend">"Without duplicates "</string>
    <string name="downloads_all_count_legend">"With duplicates "</string>
    <string name="email_clicks_legend">Clicks</string>
    <string name="email_not_click_legend">Not clicks</string>
    <string name="email_chart_description">Emails Click</string>
    <string name="email_unsubscribe_chart_description">Unsubscribe from email</string>
    <string name="email_not_unsubscribe_legend">Not unsubscribed</string>
    <string name="email_unsubscribe_legend">Unsubscribes</string>
    <string name="percent_symbole" translatable="false">%</string>
    <string name="logout_label">Logout</string>
    <string name="campaigns_label">Campaigns</string>
    <string name="assets_label">Assets</string>
    <string name="forms_label">Forms</string>
    <string name="company_label">Company</string>
    <string name="location_label">Location</string>
    <string name="title_page_detail">DETAIL</string>
    <string name="title_page_contacts">CONTACTS</string>
    <string name="msg_no_email">There is no email</string>
    <string name="language">EN</string>
    <string name="country">en</string>
    <string name="msg_phone_number_non_valid">Phone number invalid</string>
</resources>