<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/button_cancel_login"
            android:layout_width="64dp"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_cancel" />
        <TextView
            android:id="@+id/name_app_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginRight="64dp"
        >
        </TextView>
    </LinearLayout>
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo"
        >
    </ImageView>

    <EditText
        android:id="@+id/url_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/fields_email_password"
        android:drawableLeft="@drawable/ic_link"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/url_user_hint"
        android:inputType="textUri"
        android:padding="10dp"
        >

    </EditText>
    <EditText
        android:id="@+id/user_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fields_email_password"
        android:drawableLeft="@drawable/ic_profile_email"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_user_hint"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp"
    />


    <EditText
        android:id="@+id/user_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/fields_email_password"
        android:drawableLeft="@drawable/ic_lock_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password_user_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary"
    >

    </EditText>
    <Button
        android:id="@+id/btn_connection_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:background="@drawable/btn_login_and_sign_up"
        android:padding="15dp"
        android:text="@string/connexion_btn_text"
        android:textColor="@color/white"
        />
    <ProgressBar
        android:id="@+id/progressBar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />



</LinearLayout>