<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/campaign_detail_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:visibility="visible"
        />
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/content_detail_campaign"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_campaign_detail_campaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="22dp"
        tools:text="New Letters"
        />
    <TextView
        android:id="@+id/text_detail"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:text="@string/detail_lab"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/date_added_label_detail_campaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_labels"
                    android:text="@string/date_added_label"
                    />
                <TextView
                    android:id="@+id/date_added_detail_campaign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="16dp"
                    tools:text="22 march 2020"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/published_up_label_detail_campaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_labels"
                    android:text="@string/published_up_label"
                    />
                <TextView
                    android:id="@+id/published_up_detail_campaign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="16dp"
                    tools:text="22 march 2020"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/is_published_label_detail_campaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"

                    android:textStyle="bold"
                    android:textColor="@color/color_labels"
                    android:text="@string/is_published_label"
                    />
                <TextView
                    android:id="@+id/is_published_detail_campaign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:gravity="right"
                    tools:text="Yes"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/email_count_label_detail_campaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/color_labels"
                    android:text="@string/emails_count_label"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/email_count_detail_campaign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="16dp"
                    tools:text="20"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/text_performance"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:text="@string/emails_label"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/content_no_emails"
            android:orientation="vertical">
            <include layout="@layout/no_elements"></include>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_detail_campaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>