<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"></include>
    <ProgressBar
        android:id="@+id/asset_detail_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:visibility="visible"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/content_asset_detail"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_asset_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="22dp"
                tools:text="Enquete fournisseur"
                />
            <TextView
                android:id="@+id/text_detail"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:text="@string/detail_lab"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/date_added_label_asset_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_added_label"
                            android:textColor="@color/color_labels"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/date_added_asset_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="16dp"
                            tools:text="02 march 2020"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/published_up_label_asset_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/published_up_label"
                            android:textColor="@color/color_labels"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/published_up_asset_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textSize="16dp"
                            tools:text="02 march 2020"
                            />
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/extension_label_asset_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/color_labels"
                        android:textSize="16dp"
                        android:text="@string/extension_label"
                        />
                    <TextView
                        android:id="@+id/extension_asset_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textSize="16dp"
                        tools:text="PDF"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/url_download_label_asset_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/color_labels"
                        android:textSize="16dp"
                        android:text="@string/url_downloads_label"
                        />
                    <TextView
                        android:id="@+id/url_download_asset_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textSize="16dp"
                        tools:text="https://mon-mautic.com"
                        />
                </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/text_performance"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:text="@string/downloads_label"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart_asset_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="300dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

</LinearLayout>