<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"></include>
<ProgressBar
    android:id="@+id/form_submissions_progress_bar"
    style="?android:attr/progressBarStyle"
    android:layout_width="34dp"
    android:layout_height="34dp"
    android:layout_gravity="center"
    android:visibility="visible"
    />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/content_detail_form"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_form_detail_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="22dp"
            tools:text="New Letters"
            />
        <TextView
            android:id="@+id/text_detail"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="20dp"
            android:text="@string/detail_lab"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/date_added_label_detail_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/color_labels"
                        android:text="@string/date_added_label"
                        />
                    <TextView
                        android:id="@+id/date_added_detail_form"
                        android:layout_width="match_parent"
                        android:gravity="right"
                        android:layout_marginRight="16dp"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="16dp"
                        android:textSize="16dp"
                        tools:text="20/10/2020"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    >
                    <TextView
                        android:id="@+id/published_up_label_detail_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_labels"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:text="@string/published_up_label"
                        />
                    <TextView
                        android:id="@+id/published_up_detail_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textSize="16dp"
                        android:layout_marginLeft="16dp"
                        tools:text="22 march 2020"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/is_published_label_detail_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/color_labels"
                        android:textStyle="bold"
                        android:text="@string/is_published_label"
                        />
                    <TextView
                        android:id="@+id/is_published_detail_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:gravity="right"
                        android:layout_marginLeft="16dp"
                        tools:text="Yes"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:id="@+id/submissions_count_label_detail_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/color_labels"
                        android:text="@string/submissions_count_label"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/submissions_count_detail_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textSize="16dp"
                        android:layout_marginLeft="16dp"
                        tools:text="20"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/text_submissions"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:text="@string/submissions_label"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/content_no_submissions"
            android:orientation="vertical">
            <include layout="@layout/no_elements"></include>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_submissions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp" />

    </LinearLayout>
</ScrollView>
</LinearLayout>